--- a/src/app/pages/grocery-cart/grocery-cart.page.html
+++ b/src/app/pages/grocery-cart/grocery-cart.page.html
@@ -128,7 +128,8 @@
             <div class="adress">
                 <p class="adress_p">
                     {{data?.Deafult_address?.soc_name}} {{data?.Deafult_address?.street}}
-                    {{data?.Deafult_address?.city}} {{data?.Deafult_address?.zipcode}}
+                    {{data?.Deafult_address?.city}}
+                     <!-- {{data?.Deafult_address?.zipcode}} -->
                 </p>
             </div>
             <div class="change">
