--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -10,7 +10,7 @@
                     {{userAddress?.address_type ? userAddress?.address_type: 'Loading...'}}
                 </h2>
                 <p class="address">{{userAddress?.soc_name}} {{userAddress?.street}} {{userAddress?.city}}
-                    {{userAddress?.zipcode}}
+                    <!-- {{userAddress?.zipcode}} -->
                 </p>
             </div>
         </div>
