--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -161,7 +161,7 @@
                     {{"profile_page.default_address" | translate}}
                     <ion-button class="trans-btn ion-float-right" (click)="changeAddress()">{{"profile_page.change" | translate}}</ion-button>
                 </p>
-                <p class="change">{{data?.userAddress?.soc_name}} {{data?.userAddress?.street}} {{data?.userAddress?.city}} {{data?.userAddress?.zipcode}}</p>
+                <p class="change">{{data?.userAddress?.soc_name}} {{data?.userAddress?.street}} {{data?.userAddress?.city}}</p>
             </ion-label>
         </ion-item>
     </div>
