--- a/src/app/pages/select-address/select-address.page.html
+++ b/src/app/pages/select-address/select-address.page.html
@@ -29,7 +29,7 @@
                 <ion-label color="light">
                     <h2 class="title">{{ address.address_type }}</h2>
                     <p class="address-text">
-                        {{ address.soc_name }}, {{address.street}}, {{address.city}}, {{address.zipcode}}
+                        {{ address.soc_name }}, {{address.street}}, {{address.city}}
                     </p>
                 </ion-label>
                 <ion-checkbox custom-chckbox slot="end" mode="ios" [checked]="address.checked">
