--- a/src/app/pages/add-address/add-address.page.scss
+++ b/src/app/pages/add-address/add-address.page.scss
@@ -29,7 +29,7 @@ ion-content {
         ion-col {
           padding: 5px 8px;
           .back-image-div {
-            background: url(http://placehold.it/85x50);
+            // background: url(http://placehold.it/85x50);
             background-color: var(--ion-color-green);
             height: 50px;
             border-radius: 8px;
