--- a/src/app/pages/notification/notification.page.scss
+++ b/src/app/pages/notification/notification.page.scss
@@ -23,6 +23,7 @@ ion-content {
       height: 95px;
       .first_col {
         width: 24%;
+        background: white;
 
         img {
           height: 100%;
