--- a/src/app/pages/profile/profile.page.scss
+++ b/src/app/pages/profile/profile.page.scss
@@ -304,6 +304,7 @@ ion-content {
             ion-toggle {
                 --background-checked: var(--ion-color-green);
                 --handle-background-checked: var(--ion-color-white);
+                --background: white;
             }
 
             .address {
