--- a/src/app/pages/restaurant-detail/restaurant-detail.page.scss
+++ b/src/app/pages/restaurant-detail/restaurant-detail.page.scss
@@ -208,6 +208,7 @@ ion-content {
                 padding-left: 7px;
                 --background-checked: var(--ion-toggle-color);
                 --handle-background-checked: var(--ion-color-green);
+                --background: white;
             }
 
             .last_toggle {
