--- a/src/app/pages/popover/popover.page.scss
+++ b/src/app/pages/popover/popover.page.scss
@@ -1,37 +1,98 @@
-ion-content{
-
-    .detail{
+ion-content {
+    .detail {
         font-size: 14px;
         color: var(--ion-color-darkBlue);
-        font-family: 'Poppins-Medium';
-         margin-bottom: 5px;
-         margin-top: 0px;
-         width: 100%;
- }
+        font-family: "Poppins-Medium";
+        margin-bottom: 5px;
+        margin-top: 0px;
+        width: 100%;
+    }
 
-    .square{
+    .square {
         transform: rotate(45deg);
         height: 12px;
         width: 13px;
-        background-color: var( --ion-color-green);
+        background-color: var(--ion-color-green);
         margin-right: 10px;
         margin-top: 4px;
     }
 
-    .main_div{
+    .main_div {
         display: grid;
         padding-top: 15px;
-        
-        .p_div{
+
+        .p_div {
             width: 100%;
             display: flex;
         }
     }
 
-    .simple_div{
+    .main_div_detail {
+        display: contents;
+        // display: grid;
+        // padding-top: 15px;
+
+        .p_div_detail {
+            width: 100%;
+            display: inline-grid;
+
+            .detail_title {
+                font-weight: 600;
+                font-size: 15px;
+                color: var(--ion-color-green);
+                font-family: "Poppins-Medium";
+                margin-bottom: .7rem;
+                margin-top: 1rem;
+                width: 100%;
+                white-space: normal;
+                padding-left: 1rem;
+                padding-right: 1rem;
+                text-align: center;
+            }
+
+            .ion-item-detail {
+                --padding-start: 4px;
+
+                .image-thumb {
+                    margin-inline-end: 8px;
+                    margin-top: 0px;
+                    padding-bottom: 5%;
+                    height: 100%;
+                    width: 30%;
+                }
+
+                .label-detail {
+                    margin-top: 9px;
+
+                    .detail_restaurant {
+                        font-size: 11px;
+                        color: var(--ion-color-darkBlue);
+                        font-family: "Poppins-Medium";
+                        margin-bottom: 5px;
+                        margin-top: 0px;
+                        width: 100%;
+                        font-weight: 500;
+                        white-space: normal;
+                    }
+
+                    .detail_restaurant_title {
+                        font-weight: 600;
+                        font-size: 13px;
+                        color: var(--ion-color-green);
+                        font-family: "Poppins-Medium";
+                        margin-bottom: 5px;
+                        margin-top: 0px;
+                        width: 100%;
+                        white-space: normal;
+                    }
+                }
+            }
+        }
+    }
+
+    .simple_div {
         height: 20px;
         width: 26px;
         margin-right: 10px;
-
     }
 }
