--- a/src/global.scss
+++ b/src/global.scss
@@ -250,7 +250,8 @@ app-payment {
 }
 
 .popover {
-  --height: 245px !important;
+  // --height: 245px !important;
+  --min-height: 5px !important;
   --max-height: 250px !important;
   --width: 100% !important;
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.25) !important;
