--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -7,7 +7,8 @@ ion-content {
         height: 290px;
 
         .logo {
-            height: 20vh;
+            // height: 20vh;
+            height: 45%;
             margin-top: 2vh;
         }
 
