--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -49,7 +49,8 @@
     <div class="main_div">
         <!-- init quantity restaurant and filter -->
         <p class="ion-margin-horizontal filter_p">
-            {{data?.totalShop}} {{"home_page.restaurant" | translate}}
+            <!-- {{data?.totalShop}} {{"home_page.restaurant" | translate}} -->
+            {{data?.shop.length}} {{"home_page.restaurant" | translate}}
 
             <!-- init filter -->
             <span class="ion-float-right" (click)="presentModal()">
